--- a/.svelte-kit/output/server/.vite/manifest.json
+++ b/.svelte-kit/output/server/.vite/manifest.json
@@ -130,7 +130,7 @@
       "_index.js"
     ],
     "css": [
-      "_app/immutable/assets/_page.NAHdbR6q.css"
+      "_app/immutable/assets/_page.C93rRKxN.css"
     ]
   },
   "src/routes/contact/+page.svelte": {
@@ -143,7 +143,7 @@
       "_index.js"
     ],
     "css": [
-      "_app/immutable/assets/_page.AzAxh4C_.css"
+      "_app/immutable/assets/_page.BhqAtIKA.css"
     ]
   },
   "src/routes/products/+page.svelte": {
@@ -156,7 +156,7 @@
       "_index.js"
     ],
     "css": [
-      "_app/immutable/assets/_page.DRv1hwsS.css"
+      "_app/immutable/assets/_page.UhnG0j4X.css"
     ]
   },
   "src/routes/products/[id]/+page.svelte": {
