--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -74,3 +74,5 @@ jobs:
         enable_jekyll: false
         allow_empty_commit: false
         force_orphan: true
+        user_name: github-actions[bot]
+        user_email: github-actions[bot]@users.noreply.github.com
