--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,59 +1,43 @@
-name: Deploy SvelteKit Website
+name: Deploy SvelteKit to GitHub Pages
 
 on:
   push:
     branches: [ main, master ]
-  pull_request:
-    branches: [ main, master ]
 
 jobs:
-  build-and-deploy:
+  deploy-main:
     runs-on: ubuntu-latest
     timeout-minutes: 15
-    
-    strategy:
-      matrix:
-        node-version: [20.x]
     
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
       
-    - name: Setup Node.js ${{ matrix.node-version }}
+    - name: Setup Node.js 20.x
       uses: actions/setup-node@v4
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: 20.x
         cache: 'npm'
         
     - name: Install dependencies
       run: |
         npm ci
         npm list
-      
+        
     - name: Check types
       run: |
         echo "Running type checking..."
         npm run check
         echo "Type checking completed successfully"
-      
+        
     - name: Build project
       run: |
         echo "Starting build process..."
         npm run build
         echo "Build completed. Checking output:"
         ls -la build/
-      
-#     - name: Upload build artifacts
-#       uses: actions/upload-artifact@v4
-#       with:
-#         name: sveltekit-build-${{ matrix.node-version }}
-#         path: |
-#           .svelte-kit/
-#           build/
-#         retention-days: 5
         
     - name: Check build output
-      if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
       run: |
         if [ ! -d "build" ] || [ -z "$(ls -A build)" ]; then
           echo "Error: Build directory is missing or empty"
@@ -63,16 +47,16 @@ jobs:
         echo "Build directory contents:"
         ls -la build/
         
-    - name: Deploy to GitHub Pages
-      if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./build
-        cname: ''
-        commit_message: "Deploy: ${{ github.sha }}"
-        enable_jekyll: false
-        allow_empty_commit: false
-        force_orphan: true
-        user_name: github-actions[bot]
-        user_email: github-actions[bot]@users.noreply.github.com
+    - name: Configure git
+      run: |
+        git config --global user.name "github-actions[bot]"
+        git config --global user.email "github-actions[bot]@users.noreply.github.com"
+        
+    - name: Deploy to docs folder
+      run: |
+        echo "Moving build files to docs directory..."
+        rm -rf docs
+        mv build docs
+        git add docs/
+        git commit -m "Deploy: ${{ github.sha }}" || echo "No changes to commit"
+        git push
