--- a/.svelte-kit/output/client/.vite/manifest.json
+++ b/.svelte-kit/output/client/.vite/manifest.json
@@ -1,6 +1,6 @@
 {
   ".svelte-kit/generated/client-optimized/app.js": {
-    "file": "_app/immutable/entry/app.CwF8nbMI.js",
+    "file": "_app/immutable/entry/app.BfFtGbW2.js",
     "name": "entry/app",
     "src": ".svelte-kit/generated/client-optimized/app.js",
     "isEntry": true,
@@ -35,7 +35,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/1.js": {
-    "file": "_app/immutable/nodes/1.DYtrEWCq.js",
+    "file": "_app/immutable/nodes/1.CsUrbPTh.js",
     "name": "nodes/1",
     "src": ".svelte-kit/generated/client-optimized/nodes/1.js",
     "isEntry": true,
@@ -43,11 +43,11 @@
     "imports": [
       "_BJx0h4yH.js",
       "_CCa8LpMy.js",
-      "_mNkSsSxl.js"
+      "_vSmKI8Tf.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/2.js": {
-    "file": "_app/immutable/nodes/2.BSrvU3oz.js",
+    "file": "_app/immutable/nodes/2.ZArzEiWp.js",
     "name": "nodes/2",
     "src": ".svelte-kit/generated/client-optimized/nodes/2.js",
     "isEntry": true,
@@ -55,7 +55,8 @@
     "imports": [
       "_BJx0h4yH.js",
       "_CCa8LpMy.js",
-      "_D3mCfY9u.js"
+      "_D3mCfY9u.js",
+      "_vSmKI8Tf.js"
     ],
     "css": [
       "_app/immutable/assets/2.CWveyNxP.css"
@@ -154,8 +155,8 @@
     "file": "_app/immutable/chunks/D6YF6ztN.js",
     "name": "each"
   },
-  "_mNkSsSxl.js": {
-    "file": "_app/immutable/chunks/mNkSsSxl.js",
+  "_vSmKI8Tf.js": {
+    "file": "_app/immutable/chunks/vSmKI8Tf.js",
     "name": "entry",
     "imports": [
       "_BJx0h4yH.js",
@@ -163,12 +164,12 @@
     ]
   },
   "node_modules/@sveltejs/kit/src/runtime/client/entry.js": {
-    "file": "_app/immutable/entry/start.-hPyrzgO.js",
+    "file": "_app/immutable/entry/start.DhssKfum.js",
     "name": "entry/start",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/entry.js",
     "isEntry": true,
     "imports": [
-      "_mNkSsSxl.js"
+      "_vSmKI8Tf.js"
     ]
   }
 }
