--- a/.svelte-kit/output/server/.vite/manifest.json
+++ b/.svelte-kit/output/server/.vite/manifest.json
@@ -48,6 +48,13 @@
     "file": "chunks/ssr2.js",
     "name": "ssr"
   },
+  "_state.svelte.js": {
+    "file": "chunks/state.svelte.js",
+    "name": "state.svelte",
+    "imports": [
+      "_ssr2.js"
+    ]
+  },
   "_utils.js": {
     "file": "chunks/utils.js",
     "name": "utils"
@@ -71,7 +78,7 @@
       "_ssr.js",
       "_exports.js",
       "_utils.js",
-      "_ssr2.js"
+      "_state.svelte.js"
     ]
   },
   "node_modules/@sveltejs/kit/src/runtime/server/index.js": {
@@ -114,7 +121,10 @@
     "isEntry": true,
     "imports": [
       "_ssr.js",
-      "_index.js"
+      "_index.js",
+      "_exports.js",
+      "_utils.js",
+      "_state.svelte.js"
     ],
     "css": [
       "_app/immutable/assets/_page.BFQduGVd.css"
