--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,6 +40,9 @@ jobs:
       - name: Build
         run: npm run build
       
+      - name: Copy index.html to 404.html for SPA routing
+        run: cp build/index.html build/404.html
+      
       - name: Setup Pages
         uses: actions/configure-pages@v5
       
