--- a/.svelte-kit/output/client/.vite/manifest.json
+++ b/.svelte-kit/output/client/.vite/manifest.json
@@ -1,6 +1,6 @@
 {
   ".svelte-kit/generated/client-optimized/app.js": {
-    "file": "_app/immutable/entry/app.BXbYeK4H.js",
+    "file": "_app/immutable/entry/app.Ddy2T9lB.js",
     "name": "entry/app",
     "src": ".svelte-kit/generated/client-optimized/app.js",
     "isEntry": true,
@@ -40,7 +40,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/1.js": {
-    "file": "_app/immutable/nodes/1.CVAD9JMx.js",
+    "file": "_app/immutable/nodes/1.DzA6hJ5O.js",
     "name": "nodes/1",
     "src": ".svelte-kit/generated/client-optimized/nodes/1.js",
     "isEntry": true,
@@ -49,7 +49,7 @@
       "_CSMTX6pb.js",
       "_D43ao2JA.js",
       "_D6D-lzwe.js",
-      "_D1vundO1.js"
+      "_D8h9Bgwd.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/2.js": {
@@ -194,14 +194,6 @@
       "_D6D-lzwe.js"
     ]
   },
-  "_D1vundO1.js": {
-    "file": "_app/immutable/chunks/D1vundO1.js",
-    "name": "entry",
-    "imports": [
-      "_D6D-lzwe.js",
-      "_BUApaBEI.js"
-    ]
-  },
   "_D43ao2JA.js": {
     "file": "_app/immutable/chunks/D43ao2JA.js",
     "name": "legacy",
@@ -212,6 +204,14 @@
   "_D6D-lzwe.js": {
     "file": "_app/immutable/chunks/D6D-lzwe.js",
     "name": "index-client"
+  },
+  "_D8h9Bgwd.js": {
+    "file": "_app/immutable/chunks/D8h9Bgwd.js",
+    "name": "entry",
+    "imports": [
+      "_D6D-lzwe.js",
+      "_BUApaBEI.js"
+    ]
   },
   "_Db2X8iEw.js": {
     "file": "_app/immutable/chunks/Db2X8iEw.js",
@@ -236,12 +236,12 @@
     ]
   },
   "node_modules/@sveltejs/kit/src/runtime/client/entry.js": {
-    "file": "_app/immutable/entry/start.BczKlRgh.js",
+    "file": "_app/immutable/entry/start.Ck2C-85E.js",
     "name": "entry/start",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/entry.js",
     "isEntry": true,
     "imports": [
-      "_D1vundO1.js"
+      "_D8h9Bgwd.js"
     ]
   }
 }
