--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,8 +40,13 @@ jobs:
       - name: Build
         run: npm run build
       
-      - name: Copy index.html to 404.html for SPA routing
-        run: cp build/index.html build/404.html
+      - name: Create SPA-compatible structure for GitHub Pages
+        run: |
+          cp build/index.html build/404.html
+          mkdir -p build/about build/products build/contact
+          cp build/index.html build/about/index.html
+          cp build/index.html build/products/index.html
+          cp build/index.html build/contact/index.html
       
       - name: Setup Pages
         uses: actions/configure-pages@v5
