--- a/.svelte-kit/output/client/.vite/manifest.json
+++ b/.svelte-kit/output/client/.vite/manifest.json
@@ -1,6 +1,6 @@
 {
   ".svelte-kit/generated/client-optimized/app.js": {
-    "file": "_app/immutable/entry/app.Dm4wVGjQ.js",
+    "file": "_app/immutable/entry/app.D7sLei-a.js",
     "name": "entry/app",
     "src": ".svelte-kit/generated/client-optimized/app.js",
     "isEntry": true,
@@ -40,7 +40,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/1.js": {
-    "file": "_app/immutable/nodes/1.L1csmQsX.js",
+    "file": "_app/immutable/nodes/1.lc4XKF5W.js",
     "name": "nodes/1",
     "src": ".svelte-kit/generated/client-optimized/nodes/1.js",
     "isEntry": true,
@@ -49,7 +49,7 @@
       "_CSMTX6pb.js",
       "_D43ao2JA.js",
       "_D6D-lzwe.js",
-      "_DhkutK-m.js"
+      "_CDRVZyl4.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/2.js": {
@@ -187,6 +187,14 @@
       "_D6D-lzwe.js"
     ]
   },
+  "_CDRVZyl4.js": {
+    "file": "_app/immutable/chunks/CDRVZyl4.js",
+    "name": "entry",
+    "imports": [
+      "_D6D-lzwe.js",
+      "_BUApaBEI.js"
+    ]
+  },
   "_CSMTX6pb.js": {
     "file": "_app/immutable/chunks/CSMTX6pb.js",
     "name": "disclose-version",
@@ -212,14 +220,6 @@
       "_D6D-lzwe.js"
     ]
   },
-  "_DhkutK-m.js": {
-    "file": "_app/immutable/chunks/DhkutK-m.js",
-    "name": "entry",
-    "imports": [
-      "_D6D-lzwe.js",
-      "_BUApaBEI.js"
-    ]
-  },
   "_Dr4MgrxQ.js": {
     "file": "_app/immutable/chunks/Dr4MgrxQ.js",
     "name": "props",
@@ -236,12 +236,12 @@
     ]
   },
   "node_modules/@sveltejs/kit/src/runtime/client/entry.js": {
-    "file": "_app/immutable/entry/start.BizUx7W4.js",
+    "file": "_app/immutable/entry/start.CR_ZpI9r.js",
     "name": "entry/start",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/entry.js",
     "isEntry": true,
     "imports": [
-      "_DhkutK-m.js"
+      "_CDRVZyl4.js"
     ]
   }
 }
