--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,9 +49,9 @@ jobs:
           mkdir -p build/about build/products build/contact
           
           # Create redirect pages that point to the main SPA
-          echo '<!DOCTYPE html><html><head><meta charset="utf-8"><title>Redirecting...</title><meta http-equiv="refresh" content="0; url=/saraylov/#"></head><body><p>If you are not redirected automatically, follow this <a href="/saraylov/#">link</a>.</p></body></html>' > build/about/index.html
-          echo '<!DOCTYPE html><html><head><meta charset="utf-8"><title>Redirecting...</title><meta http-equiv="refresh" content="0; url=/saraylov/#"></head><body><p>If you are not redirected automatically, follow this <a href="/saraylov/#">link</a>.</p></body></html>' > build/products/index.html
-          echo '<!DOCTYPE html><html><head><meta charset="utf-8"><title>Redirecting...</title><meta http-equiv="refresh" content="0; url=/saraylov/#"></head><body><p>If you are not redirected automatically, follow this <a href="/saraylov/#">link</a>.</p></body></html>' > build/contact/index.html
+          echo '<!DOCTYPE html><html><head><meta charset="utf-8"><title>Redirecting...</title><meta http-equiv="refresh" content="0; url=/#"></head><body><p>If you are not redirected automatically, follow this <a href="/#">link</a>.</p></body></html>' > build/about/index.html
+          echo '<!DOCTYPE html><html><head><meta charset="utf-8"><title>Redirecting...</title><meta http-equiv="refresh" content="0; url=/#"></head><body><p>If you are not redirected automatically, follow this <a href="/#">link</a>.</p></body></html>' > build/products/index.html
+          echo '<!DOCTYPE html><html><head><meta charset="utf-8"><title>Redirecting...</title><meta http-equiv="refresh" content="0; url=/#"></head><body><p>If you are not redirected automatically, follow this <a href="/#">link</a>.</p></body></html>' > build/contact/index.html
       
       - name: Setup Pages
         uses: actions/configure-pages@v5
