--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,10 +40,13 @@ jobs:
       - name: Build
         run: npm run build
       
+      - name: Generate enhanced index.html
+        run: node generate-enhanced-index.js
+      
       - name: Configure SPA routing for GitHub Pages
         run: |
-          # Copy our enhanced index.html to be the main file
-          cp build/final-index.html build/index.html
+          # Copy enhanced index.html to be the main file
+          cp build/enhanced-index.html build/index.html
           
           # Copy the fallback file to 404.html for GitHub Pages
           cp build/index.html build/404.html
