--- a/.svelte-kit/output/client/.vite/manifest.json
+++ b/.svelte-kit/output/client/.vite/manifest.json
@@ -1,6 +1,6 @@
 {
   ".svelte-kit/generated/client-optimized/app.js": {
-    "file": "_app/immutable/entry/app.BhHuzAam.js",
+    "file": "_app/immutable/entry/app.BwHJappG.js",
     "name": "entry/app",
     "src": ".svelte-kit/generated/client-optimized/app.js",
     "isEntry": true,
@@ -40,7 +40,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/1.js": {
-    "file": "_app/immutable/nodes/1.ChSklXYu.js",
+    "file": "_app/immutable/nodes/1.vv9A0Y-a.js",
     "name": "nodes/1",
     "src": ".svelte-kit/generated/client-optimized/nodes/1.js",
     "isEntry": true,
@@ -49,7 +49,7 @@
       "_CSMTX6pb.js",
       "_D43ao2JA.js",
       "_D6D-lzwe.js",
-      "_CvtCeujX.js"
+      "_CndG95nj.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/2.js": {
@@ -194,8 +194,8 @@
       "_D6D-lzwe.js"
     ]
   },
-  "_CvtCeujX.js": {
-    "file": "_app/immutable/chunks/CvtCeujX.js",
+  "_CndG95nj.js": {
+    "file": "_app/immutable/chunks/CndG95nj.js",
     "name": "entry",
     "imports": [
       "_D6D-lzwe.js",
@@ -236,12 +236,12 @@
     ]
   },
   "node_modules/@sveltejs/kit/src/runtime/client/entry.js": {
-    "file": "_app/immutable/entry/start.CI23okVn.js",
+    "file": "_app/immutable/entry/start.Bl2sz8e-.js",
     "name": "entry/start",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/entry.js",
     "isEntry": true,
     "imports": [
-      "_CvtCeujX.js"
+      "_CndG95nj.js"
     ]
   }
 }
