--- a/.svelte-kit/output/client/.vite/manifest.json
+++ b/.svelte-kit/output/client/.vite/manifest.json
@@ -1,6 +1,6 @@
 {
   ".svelte-kit/generated/client-optimized/app.js": {
-    "file": "_app/immutable/entry/app.BwHJappG.js",
+    "file": "_app/immutable/entry/app.BhTkDp_m.js",
     "name": "entry/app",
     "src": ".svelte-kit/generated/client-optimized/app.js",
     "isEntry": true,
@@ -21,7 +21,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/0.js": {
-    "file": "_app/immutable/nodes/0.BdPwgKge.js",
+    "file": "_app/immutable/nodes/0.BzDeOEO3.js",
     "name": "nodes/0",
     "src": ".svelte-kit/generated/client-optimized/nodes/0.js",
     "isEntry": true,
@@ -33,14 +33,15 @@
       "_Db2X8iEw.js",
       "_BOxDSPY6.js",
       "_BD7MZ89G.js",
-      "_B_yeyZDL.js"
+      "_B_yeyZDL.js",
+      "_8v2l7Nzc.js"
     ],
     "css": [
       "_app/immutable/assets/0.DuW6oD7x.css"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/1.js": {
-    "file": "_app/immutable/nodes/1.vv9A0Y-a.js",
+    "file": "_app/immutable/nodes/1.CU4dNuJZ.js",
     "name": "nodes/1",
     "src": ".svelte-kit/generated/client-optimized/nodes/1.js",
     "isEntry": true,
@@ -49,7 +50,7 @@
       "_CSMTX6pb.js",
       "_D43ao2JA.js",
       "_D6D-lzwe.js",
-      "_CndG95nj.js"
+      "_ClFw-M6J.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/2.js": {
@@ -151,6 +152,10 @@
       "_app/immutable/assets/6.B-NPgZm1.css"
     ]
   },
+  "_8v2l7Nzc.js": {
+    "file": "_app/immutable/chunks/8v2l7Nzc.js",
+    "name": "client"
+  },
   "_BD7MZ89G.js": {
     "file": "_app/immutable/chunks/BD7MZ89G.js",
     "name": "attributes",
@@ -194,12 +199,13 @@
       "_D6D-lzwe.js"
     ]
   },
-  "_CndG95nj.js": {
-    "file": "_app/immutable/chunks/CndG95nj.js",
+  "_ClFw-M6J.js": {
+    "file": "_app/immutable/chunks/ClFw-M6J.js",
     "name": "entry",
     "imports": [
       "_D6D-lzwe.js",
-      "_BUApaBEI.js"
+      "_BUApaBEI.js",
+      "_8v2l7Nzc.js"
     ]
   },
   "_D43ao2JA.js": {
@@ -236,12 +242,12 @@
     ]
   },
   "node_modules/@sveltejs/kit/src/runtime/client/entry.js": {
-    "file": "_app/immutable/entry/start.Bl2sz8e-.js",
+    "file": "_app/immutable/entry/start.CvofqNOk.js",
     "name": "entry/start",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/entry.js",
     "isEntry": true,
     "imports": [
-      "_CndG95nj.js"
+      "_ClFw-M6J.js"
     ]
   }
 }
