--- a/.svelte-kit/output/server/.vite/manifest.json
+++ b/.svelte-kit/output/server/.vite/manifest.json
@@ -6,7 +6,8 @@
     "isEntry": true,
     "imports": [
       "_internal.js",
-      "_environment.js"
+      "_environment.js",
+      "_server.js"
     ]
   },
   "_auth.js": {
@@ -57,7 +58,8 @@
       "_index.js",
       "_environment.js",
       "_equality.js",
-      "_context.js"
+      "_context.js",
+      "_server.js"
     ],
     "dynamicImports": [
       "src/hooks.server.ts"
@@ -81,6 +83,10 @@
   "_products.js": {
     "file": "chunks/products.js",
     "name": "products"
+  },
+  "_server.js": {
+    "file": "chunks/server.js",
+    "name": "server"
   },
   "_shared.js": {
     "file": "chunks/shared.js",
@@ -111,7 +117,8 @@
     "isEntry": true,
     "imports": [
       "_shared.js",
-      "_environment.js"
+      "_environment.js",
+      "_server.js"
     ]
   },
   "node_modules/@sveltejs/kit/src/runtime/components/svelte-5/error.svelte": {
@@ -133,6 +140,7 @@
     "isEntry": true,
     "imports": [
       "_environment.js",
+      "_server.js",
       "_shared.js",
       "_exports.js",
       "_utils.js",
@@ -152,6 +160,7 @@
     "isEntry": true,
     "imports": [
       "_index.js",
+      "_server.js",
       "_index2.js",
       "_context.js"
     ],
