--- a/.svelte-kit/output/client/.vite/manifest.json
+++ b/.svelte-kit/output/client/.vite/manifest.json
@@ -1,6 +1,6 @@
 {
   ".svelte-kit/generated/client-optimized/app.js": {
-    "file": "_app/immutable/entry/app.BhTkDp_m.js",
+    "file": "_app/immutable/entry/app.DgI4g3pG.js",
     "name": "entry/app",
     "src": ".svelte-kit/generated/client-optimized/app.js",
     "isEntry": true,
@@ -21,7 +21,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/0.js": {
-    "file": "_app/immutable/nodes/0.BzDeOEO3.js",
+    "file": "_app/immutable/nodes/0.CrsdLC2T.js",
     "name": "nodes/0",
     "src": ".svelte-kit/generated/client-optimized/nodes/0.js",
     "isEntry": true,
@@ -34,14 +34,14 @@
       "_BOxDSPY6.js",
       "_BD7MZ89G.js",
       "_B_yeyZDL.js",
-      "_8v2l7Nzc.js"
+      "_DdaIsR-H.js"
     ],
     "css": [
       "_app/immutable/assets/0.DuW6oD7x.css"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/1.js": {
-    "file": "_app/immutable/nodes/1.CU4dNuJZ.js",
+    "file": "_app/immutable/nodes/1.-IqLM7Pw.js",
     "name": "nodes/1",
     "src": ".svelte-kit/generated/client-optimized/nodes/1.js",
     "isEntry": true,
@@ -50,7 +50,7 @@
       "_CSMTX6pb.js",
       "_D43ao2JA.js",
       "_D6D-lzwe.js",
-      "_ClFw-M6J.js"
+      "_Dct3ZqFx.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/2.js": {
@@ -108,7 +108,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/5.js": {
-    "file": "_app/immutable/nodes/5.CH8O5f9Z.js",
+    "file": "_app/immutable/nodes/5.DkHtsmki.js",
     "name": "nodes/5",
     "src": ".svelte-kit/generated/client-optimized/nodes/5.js",
     "isEntry": true,
@@ -124,14 +124,15 @@
       "_Dr4MgrxQ.js",
       "_BrFe7kwN.js",
       "_BD7MZ89G.js",
-      "_C-Gqmohk.js"
+      "_C-Gqmohk.js",
+      "_DdaIsR-H.js"
     ],
     "css": [
       "_app/immutable/assets/5.BI0xsAFr.css"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/6.js": {
-    "file": "_app/immutable/nodes/6.DId7z08Y.js",
+    "file": "_app/immutable/nodes/6.DmtXUvXi.js",
     "name": "nodes/6",
     "src": ".svelte-kit/generated/client-optimized/nodes/6.js",
     "isEntry": true,
@@ -146,15 +147,12 @@
       "_BOxDSPY6.js",
       "_BD7MZ89G.js",
       "_B_yeyZDL.js",
-      "_C-Gqmohk.js"
+      "_C-Gqmohk.js",
+      "_DdaIsR-H.js"
     ],
     "css": [
       "_app/immutable/assets/6.B-NPgZm1.css"
     ]
-  },
-  "_8v2l7Nzc.js": {
-    "file": "_app/immutable/chunks/8v2l7Nzc.js",
-    "name": "client"
   },
   "_BD7MZ89G.js": {
     "file": "_app/immutable/chunks/BD7MZ89G.js",
@@ -199,15 +197,6 @@
       "_D6D-lzwe.js"
     ]
   },
-  "_ClFw-M6J.js": {
-    "file": "_app/immutable/chunks/ClFw-M6J.js",
-    "name": "entry",
-    "imports": [
-      "_D6D-lzwe.js",
-      "_BUApaBEI.js",
-      "_8v2l7Nzc.js"
-    ]
-  },
   "_D43ao2JA.js": {
     "file": "_app/immutable/chunks/D43ao2JA.js",
     "name": "legacy",
@@ -226,6 +215,19 @@
       "_D6D-lzwe.js"
     ]
   },
+  "_Dct3ZqFx.js": {
+    "file": "_app/immutable/chunks/Dct3ZqFx.js",
+    "name": "entry",
+    "imports": [
+      "_D6D-lzwe.js",
+      "_BUApaBEI.js",
+      "_DdaIsR-H.js"
+    ]
+  },
+  "_DdaIsR-H.js": {
+    "file": "_app/immutable/chunks/DdaIsR-H.js",
+    "name": "client"
+  },
   "_Dr4MgrxQ.js": {
     "file": "_app/immutable/chunks/Dr4MgrxQ.js",
     "name": "props",
@@ -242,12 +244,12 @@
     ]
   },
   "node_modules/@sveltejs/kit/src/runtime/client/entry.js": {
-    "file": "_app/immutable/entry/start.CvofqNOk.js",
+    "file": "_app/immutable/entry/start.CPLVidUS.js",
     "name": "entry/start",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/entry.js",
     "isEntry": true,
     "imports": [
-      "_ClFw-M6J.js"
+      "_Dct3ZqFx.js"
     ]
   }
 }
