--- a/.svelte-kit/output/server/.vite/manifest.json
+++ b/.svelte-kit/output/server/.vite/manifest.json
@@ -388,6 +388,7 @@
     "isEntry": true,
     "imports": [
       "_index.js",
+      "_server.js",
       "_index2.js",
       "_context.js"
     ],
@@ -402,6 +403,7 @@
     "isEntry": true,
     "imports": [
       "_index.js",
+      "_server.js",
       "_index2.js",
       "_context.js"
     ],
